[package]
name = "idkhtml"
version = "0.1.0"
edition = "2021"
authors = ["Donghyun Shin <aperso@aperso.dev>"]
description = "A blazing fast HTML parser"
documentation = "https://docs.rs/idkhtml"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
